fixed port variable, and set database_url

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 JWT_SECRET_KEY = 'secret'
+DATABASE_URL = postgresql://postgres:tv7Jdf9hc3oxEKn8yMVR@containers-us-west-147.railway.app:7166/railway
